--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainContainer{
+  width: 100%;
+  height: 30vh;
+  margin-top: 20px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* border: 1px solid red; */
+}
+.paragraph{
+  width: 30%;
+  /* margin-left: 10px;
+  padding-left: 20px; */
+  font-size: 27px;
+  font-weight: 600;
+  /* border: 2px solid rgb(0, 0, 0); */
+}
+.paragraph2{
+  width: 60%;
+  color: rgb(112,111,111);
+  /* border: 2px solid yellow; */
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.apiContainer{
+  width: 95%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-left: 20px;
+  /* border: 2px solid red; */
 }
